assembly/test/failing/constval_multiple.asm
@constval aaaa 0x30
@constval aaaa 0x31